k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gantaek
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gantaek
  template:
    metadata:
      labels:
        app: gantaek
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: gantaek
          image: ghcr.io/doyosaee/gantaek:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3007
          readinessProbe:
            httpGet:
              path: /
              port: 3007
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: gantaek-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: gantaek
  ports:
    - port: 3007
      targetPort: 3007
      nodePort: 30071
