k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gantaek-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - gantaek.doyosae.com
      secretName: gantaek-tls
  rules:
    - host: gantaek.doyosae.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gantaek-service
                port:
                  number: 3007
